[gd_scene load_steps=2 format=3 uid="uid://bgq2rim70jq4y"]

[ext_resource type="Script" path="res://UI.gd" id="1_8bu5c"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_8bu5c")

[node name="Roll" type="Button" parent="."]
offset_left = 512.0
offset_right = 640.0
offset_bottom = 64.0
text = "Roll"

[node name="SelectRegulation" type="OptionButton" parent="."]
offset_left = 128.0
offset_right = 320.0
offset_bottom = 64.0

[node name="CopyToClipboard" type="Button" parent="."]
offset_left = 832.0
offset_right = 1024.0
offset_bottom = 64.0
text = "Copy to Clipboard"

[connection signal="pressed" from="Roll" to="." method="_on_roll_pressed"]
[connection signal="pressed" from="CopyToClipboard" to="." method="_on_copy_to_clipboard_pressed"]
